--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  photo_manager: ^0.4.3
+  photo_manager:
+    git: https://github.com/hugochou/flutter_photo_manager.git
   # photo_manager:
   #   git:
   #     url: https://github.com/CaiJingLong/flutter_photo_manager.git
